--- a/PMS_App/PMS_App.Model/PMS_App.Model.csproj
+++ b/PMS_App/PMS_App.Model/PMS_App.Model.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>94017829-09ee-43c4-b486-21fe095fcafd</UserSecretsId>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -14,11 +13,8 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="6.0.0" />
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\PMS_App.Model\PMS_App.Model.csproj" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+
 	</ItemGroup>
 
 </Project>
